fix(styles): improve readability.
- Re-use btn-cta in prefooter. Colour had to be replace
in order to achieve better contrast in all usages.
- Resize prefooter to make it consistent with footer.
- Update text colours in footer for better contrast.
- Fix issue where all ctas has display none in mobile.
- Update text colour for paragraphs to improve readability

--- a/assets/css/base.module.css
+++ b/assets/css/base.module.css
@@ -89,66 +89,6 @@
   align-items: center;
 }
 
-.site-footer {
-  padding: 100px 0;
-}
-
-.site-footer-logo {
-  width: 175px;
-  align-self: flex-end;
-}
-
-.site-footer-widget-title {
-  color: #fff;
-  margin-bottom: 30px;
-}
-
-.site-footer-widget-description {
-  color: #fff;
-  line-height: 30px;
-}
-
-.site-footer-widget-description a {
-  color: #fff;
-}
-
-.site-footer-widget-links {
-  margin: 0;
-  padding: 0;
-}
-
-.site-footer-widget-links li {
-  list-style: none;
-}
-
-.site-footer-widget-links li a {
-  color: #fff;
-  transition: all 0.3s cubic-bezier(0.36, 0.03, 0, 0.91);
-  display: block;
-}
-
-.site-footer-widget-links li:not(:last-child) a {
-  padding-bottom: 9px;
-}
-
-.site-footer-widget-top {
-  display: flex;
-  align-self: start;
-  padding: 0;
-  margin: 0;
-}
-
-.site-footer-widget-top-text {
-  padding: 16px;
-}
-
-.site-footer-copyright p {
-  color: #fff;
-  margin: 50px auto 0;
-  text-align: center;
-  margin-top: 100px;
-}
-
 .submenu {
   display: none;
   position: absolute;
@@ -160,6 +100,10 @@
   min-width: 280px;
   padding: 0;
   z-index: 1000;
+}
+
+.nav-item:hover>.submenu {
+  display: block;
 }
 
 .submenu-list-item {
@@ -189,15 +133,10 @@
   background-color: var(--secondary-color);
 }
 
-@media (min-width: 992px) {
-  .nav-item:hover>.submenu {
-    display: block;
-  }
-}
-
 .prefooter-section {
   display: flex;
   justify-content: center;
+  justify-self: center;
   align-items: center;
   flex-direction: column;
   background: linear-gradient(135deg, #1e3c72, #2a5298);
@@ -205,11 +144,11 @@
   text-align: center;
   border-radius: 10px;
   margin: 120px 0;
-  height: 500px;
-  width: 100%;
+  height: 350px;
+  width: 80%;
   box-sizing: border-box;
   padding: 0 20px;
-  
+
   /* Compatibility with iPhone (notch / safe area) */
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
@@ -236,6 +175,87 @@
   line-height: 1.4;
 }
 
+.footer-sitemap-column {
+  min-width: 150px;
+}
+
+.site-footer-widget-title {
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 8px;
+  color: #808080;
+}
+
+.site-footer-widget-links {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.site-footer-widget-link {
+  color: #fff;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.site-footer-widget-link:hover {
+  color: #babec3;
+}
+
+.site-footer-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+}
+
+.site-footer-sitemap {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 32px;
+}
+
+.site-footer-logo-container {
+  align-self: flex-end;
+}
+
+.site-footer-logo {
+  width: 250px;
+}
+
+.site-footer-widget-links {
+  margin: 0;
+  padding: 0;
+}
+
+.site-footer-widget-links li {
+  list-style: none;
+}
+
+.site-footer-widget-link {
+  color: #fff;
+  transition: all 0.3s cubic-bezier(0.36, 0.03, 0, 0.91);
+  display: block;
+}
+
+.site-footer-widget-links li:not(:last-child) a {
+  padding-bottom: 9px;
+}
+
+.site-footer-widget-top {
+  display: flex;
+  align-self: end;
+  padding: 0;
+  margin: 0;
+}
+
+.site-footer-copyright {
+  color: #808080;
+  margin-top: 16px;
+}
+
 @media (max-width: 991px) {
   .site-navigation {
     background: #000;
@@ -244,9 +264,17 @@
     width: calc(100% - 20px);
   }
 
+  .btn-cta-nav {
+    display: none;
+  }
+
   .navbar-nav {
     margin-top: 50px;
     height: 100vh;
+  }
+
+  .nav-item:hover>.submenu {
+    display: block;
   }
 
   .nav-link {
@@ -258,13 +286,13 @@
     width: 100%;
     border-top: 1px solid rgb(75, 75, 75);
   }
-  
+
   .submenu {
     position: relative;
     min-width: 280px;
     padding: 0;
     z-index: 1000;
-    border:none;
+    border: none;
   }
 
   .submenu.open {
@@ -291,7 +319,8 @@
   }
 
   .site-footer-widget {
-    margin-bottom: 40px;
+    display: flex;
+    flex-direction: row;
   }
 
   .site-footer-widget-title {
@@ -315,6 +344,10 @@
     display: block;
   }
 
+  .prefooter-section {
+    width: 100%;
+  }
+
   .prefooter-content {
     max-width: 280px;
     text-align: center;
@@ -328,6 +361,35 @@
   }
 
   .prefooter-subtitle {
+    font-size: 16px;
+  }
+
+  .site-footer-container {
+    flex-direction: column-reverse;
+    justify-self: center;
+  }
+
+  .site-footer-sitemap {
+    text-align: center;
+    width: 100%;
+    flex-direction: column;
+    gap: 24px;
+  }
+
+  .site-footer-logo {
+    align-self: center;
+    width: 150px;
+  }
+
+  .site-footer-logo-container {
+    display: flex;
+    justify-self: center;
+    flex-direction: column;
+    align-self: center;
+    margin-top: 40px;
+  }
+
+  .site-footer-copyright {
     font-size: 16px;
   }
 }
